<resources>
    <string name="app_name">Grama</string>
    <!-- String home -->
    <string name="home_page_game_1">Ortographe</string>
    <string name="home_page_game_2">Définitions</string>
    <string name="home_page_game_3">Grammaire</string>
    <!-- String Profile -->
    <string name="notification">Notifications</string>
    <string name="connexion">Connexion</string>
    <string name="duel">Duel</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="connected">Vous êtes connecté</string>
    <string name="not_connected">Vous devez être connecté</string>
    <string name="wait_connexion">En attente d\'une connexion</string>
    <string name="host">Hoster une partie</string>
    <string name="create_account">Créer un compte</string>
    <string name="error">Bad email or password</string>
    <string name="email">example@gmail.com</string>
    <string name="pseudo">Username</string>
    <string name="password">password</string>
    <string name="ip">adresse ip</string>
    <string name="annuler">annuler</string>
    <string name="port">port</string>
    <string name="already_account">J\'ai déjà un compte</string>
    <!-- String Description -->
    <string name="desc_grama">Grama</string>
    <string name="desc_profile">Profile</string>
    <string name="desc_home">Home</string>
    <string name="desc_param">Settings</string>
    <string name="desc_stat">Statistics</string>
    <string name="desc_duel">Duel</string>
    <string name="desc_cross">GoBack</string>
    <string name="background">background</string>
    <string name="réponse">réponse</string>
    <string name="lancer_la_partie">lancer la partie</string>
    <string name="wait_host">en attente de l\'hôte</string>
    <string name="connected_clients">%d connecté(s)</string>
    <string name="notifications">Notifications</string>
    <string name="sound">son</string>
    <string name="language">langage</string>
    <string name="english">english</string>
    <string name="french">français</string>
    <string name="spanish">spanish</string>
    <string name="display">display</string>
    <string name="statistics">Statistiques</string>
    <string name="reset">Reset</string>
    <string name="total_wins">Total Wins: %d</string>
    <string name="total_losses">Total Losses: %d</string>
    <string name="win_percentage">Win Percentage: %.0f%%</string>
    <string name="effacer">Effacer</string>
    <string name="about">About</string>
    <string name="aboutInfo">This app was created by Xavier Tonnellier</string>
    <string name="version">Version 1.0.0</string>
    <string name="leaveGame">Return</string>
    <string name="winner">Winner is %s with %d points</string>
    <string name="play_again">Play Again</string>
    <string name="your_score">Your Score: %d points</string>
</resources>