<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/desc_param"
        style="@style/BigTextStyle"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/notification"
        style="@style/DefaultTextStyle"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifications_switch"
        android:text="@string/notifications"
        style="@style/DefaultTextStyle"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/sound"
        style="@style/DefaultTextStyle"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/sound_seekbar"
        android:max="100"
        android:progress="50"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/language"
        style="@style/DefaultTextStyle"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/language_english"
            android:text="@string/english"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/language_french"
            android:text="@string/french"
            android:checked="true"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/language_spanish"
            android:text="@string/spanish"
            style="@style/DefaultTextStyle"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <TextView
        android:text="@string/pseudo"
        style="@style/DefaultTextStyle"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/display_checkbox"
        android:text="@string/display"
        style="@style/DefaultTextStyle"
        android:padding="16dp"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>