<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/duel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/BigTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/duel" />

            <TextView
                android:id="@+id/prof_error"
                style="@style/RedTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/error"
                android:visibility="gone" />

            <EditText
                android:id="@+id/adresse_ip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=" "
                android:background="@color/light_grey"
                android:gravity="center"
                android:hint="@string/ip"
                android:inputType="textEmailAddress"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:autofillHints=" "
                android:background="@color/light_grey"
                android:gravity="center"
                android:hint="@string/port"
                android:inputType="number"
                android:textSize="30sp" />

            <Button
                android:id="@+id/duel_connexion_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@color/black"
                android:text="@string/connexion"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/duel_host_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@color/black"
                android:text="@string/host"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>