<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/BigTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/create_account">
            </TextView>
            <EditText
                android:id="@+id/prof_email_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:hint="@string/email"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:autofillHints=" "
                android:inputType="textEmailAddress">
            </EditText>
            <EditText
                android:id="@+id/prof_pseudo_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:hint="@string/pseudo"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:autofillHints=" "
                android:inputType="textEmailAddress">
            </EditText>
            <EditText
                android:id="@+id/prof_password_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/light_grey"
                android:hint="@string/password"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:autofillHints=" "
                android:inputType="textPassword">
            </EditText>
            <TextView
                android:id="@+id/prof_connexion_account_create"
                style="@style/DefaultTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/already_account"
                android:background="@color/dark_grey"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_marginBottom="15dp">
            </TextView>
            <Button
                android:id="@+id/prof_create_account_create"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:background="@color/black"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp">
            </Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>