<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        style="@style/GreenTextStyle">
    </TextView>

    <!-- Top -->
    <ImageView
        android:id="@+id/id_prof"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_prof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/desc_profile">
    </ImageView>
    <ImageView
        android:id="@+id/id_param"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_param"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/desc_param">
    </ImageView>
    <!-- Bottom -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/id_navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <FrameLayout
        android:id="@+id/game_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="100dp">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>